@@ -8,7 +8,7 @@ WCom.Form.DataStructure = (function() {
          this.drag = {};
          this.dragNodeX = null;
          this.dragNodeY = null;
-         const wrapperId = args.wrapperId || '#frame';
+         const wrapperId = args.wrapperId || '#main';
          this.scrollableWrapper = document.querySelector(wrapperId);
          this.dragHandler = this._dragHandler.bind(this);
          this.dropHandler = this._dropHandler.bind(this);
