@@ -58,15 +58,12 @@
 form.classic {
     background: #colours[panel-bg]; border-radius: 5px;
     box-shadow: 3px 3px 3px; color: #colours[line]; display: inline-block;
-    margin: 0 1rem; padding-bottom: 0.25rem; position: relative;
+    padding-bottom: 0.25rem; position: relative;
     div {
         color: #colours[text];
     }
     .alert {
         font-family: #fonts[system]; font-size: 0.8rem;
-    }
-    .alert-info {
-        padding-bottom: 0.5rem;
     }
     .ds-add-icon {
         font-family: #fonts[system]; font-size: smaller; font-weight: bold;
@@ -79,6 +76,7 @@ form.classic {
         row-gap: 0.5rem;
         .ds-header {
             font-family: #fonts[system]; font-size: 0.8rem; font-weight: normal;
+            padding-top: 0.2rem;
         }
         .ds-row {
             background: #colours[ds-tile-bg];
@@ -161,7 +159,8 @@ form.classic {
     }
     .field-label {
         display: flex; font-family: #fonts[system]; font-size: 0.8rem;
-        grid-area: label; position: relative; white-space: nowrap;
+        grid-area: label; padding-top: 0.2rem; position: relative;
+        white-space: nowrap;
         .label-sep-after {
             position: absolute; right: 0.25rem;
         }
@@ -222,20 +221,20 @@ form.classic {
     }
     .input-field {
         padding-bottom: 0.5rem; position: relative;
-        input {
-            height: 1.5rem;
-        }
         input, select, textarea {
-            border-radius: 5px; font-size: 0.85rem;
-            font-family: #fonts[data]; grid-area: input;
-            max-width: #sizes[field-max-width];
+            border-radius: 5px; font-size: 0.85rem; font-family: #fonts[data];
+            grid-area: input;
+        }
+        input {
+            height: 1.5rem; max-width: #sizes[field-max-width];
         }
         select {
-            max-width: #sizes[select-max-width];
+            background: #grads[button-bg]; max-width: #sizes[select-max-width];
         }
         textarea {
-            box-sizing: content-box; min-height: 3lh;
-            min-width: #sizes[textarea-min-width]; overflow: auto;
+            box-sizing: content-box; max-width: #sizes[field-max-width];
+            min-height: 3lh; min-width: #sizes[textarea-min-width];
+            overflow: auto;
         }
         input:focus, textarea:focus {
             background: #colours[field-active];
@@ -250,11 +249,11 @@ form.classic {
         input[readonly=readonly][type=datetime-local] {
             background: #colours[panel-bg]; border: 0; color: #colours[text];
         }
-        select.select-multiple option {
-            min-width: 8rem;
-        }
         input[type=submit] {
             font-family: #fonts[system]; font-size: 0.8rem;
+        }
+        select.select-multiple option {
+            min-width: 8rem;
         }
         select.select-multiple option[selected=selected] {
             background: #colours[field-selected-bg];
@@ -293,7 +292,8 @@ form.classic {
     }
     .input-boolean {
         .checkbox-wrapper {
-            grid-area: input; isolation: isolate; position: relative;
+            grid-area: input; isolation: isolate;
+            padding-top: 0.2rem; position: relative;
             input[type=checkbox] {
                 height: #sizes[checkbox-height]; margin: 0; opacity: 0;
                 position: relative; width: #sizes[checkbox-width];
@@ -304,7 +304,7 @@ form.classic {
             background: #grads[button-bg];
             border: 2px inset #colours[button-border]; border-radius: 10px;
             content: ''; display: block; position: absolute;
-            height: #sizes[checkbox-height]; left: 0; top: -1px;
+            height: #sizes[checkbox-height]; left: 0; top: 3px;
             width: #sizes[checkbox-knob-width]; z-index: 2;
         }
         .checkbox-wrapper:has(input[type=checkbox]:checked)::after {
@@ -430,14 +430,14 @@ form.classic {
         }
     }
     .input-password .reveal {
-        position: absolute; right: 2rem; top: 0;
+        cursor: pointer; grid-area: selector; padding: 0 0.5rem;
     }
     .input-select option {
         font-family: #fonts[data];
     }
     .input-display span {
         font-size: 0.8rem; grid-area: input;
-        padding-left: 0.25rem; white-space: nowrap;
+        padding: 0.2rem 0 0 0.25rem; white-space: nowrap;
     }
     .label-right {
         text-align: right;
@@ -475,7 +475,7 @@ form.classic.filemanager {
     }
 }
 .form-messages {
-    margin-bottom: 0.5rem;
+    padding-bottom: 0.5rem;
     .alert {
         .card {
             font-family: #fonts[data]; margin-top: 0.25rem;
